--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
-streamlit
-pandas
-openpyxl
-python-docx
-python-pptx
+# --- Core web ---
+streamlit==1.39.0
 
+# --- Office file handling ---
+python-docx==1.1.2
+python-pptx==0.6.23
+openpyxl==3.1.5
 
+# --- Data processing ---
+pandas==2.2.3
+
+# --- Utility ---
+requests==2.32.3
